--- a/index.html
+++ b/index.html
@@ -11,11 +11,6 @@
   </style>
 </head>
 <body>
-<p class="p1">&lt;!DOCTYPE html&gt;</p>
-<p class="p1">&lt;html style="height:100vh;margin:0;overflow:hidden;background:#000;"&gt;</p>
-<p class="p1">&lt;body style="margin:0;height:100vh;"&gt;</p>
-<p class="p1">&lt;iframe src="https://www.youtube.com/embed/dsoM6TYIkOI?autoplay=1&amp;mute=1&amp;controls=0&amp;modestbranding=1&amp;loop=1&amp;playlist=dsoM6TYIkOI" style="width:100%;height:100%;border:0;" allowfullscreen&gt;&lt;/iframe&gt;</p>
-<p class="p1">&lt;/body&gt;</p>
-<p class="p1">&lt;/html&gt;</p>
+<iframe src="https://www.youtube.com/embed/dsoM6TYIkOI?autoplay=1&mute=1&controls=0&modestbranding=1&loop=1&playlist=dsoM6TYIkOI" style="width:100%;height:100%;border:0;" allowfullscreen></iframe>
 </body>
 </html>
